--- a/First.css
+++ b/First.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background-color: rgb(231, 212, 187);
 }
 body{
     width: auto;
@@ -11,17 +12,20 @@ body{
 }
 .container{
     width: 200px;
-    position: relative;
+}
+.list{
+    position: absolute;
+    transform-origin: top;
+    transition: 0.3s;
+    top: 55%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
 
 }
-.PLAY{
-    background-color: rgb(52, 3, 99)
-
-}
-.PLAY:hover {
-    background-color:rgb(92, 92, 250) ;
-}
-.PLAY,.links{
+.links{
+    background-color: rgb(52, 3, 99);
+    display: block;
+    margin: 10px;
     padding: 18px;
     font-size: 1.8em;
     font-family: sans-serif;
@@ -29,22 +33,9 @@ body{
     outline: none;
     width: 200px;
     color: aliceblue;
-}
-.list{
-    position: absolute;
-    transform: scaleY(0);
-    transform-origin: top;
-    transition: 0.3s;
-
-}
-.newlist{
-    transform: scaleY(1);
-}
-.links{
-    background-color:blue ;
+    cursor: pointer;
 }
 .links:hover{
-    background-color: lightblue;
-    transform: scale(1.1);
-
+    background-color: rgb(108, 149, 163);
+    transition: 0.5s;
 }
