--- a/SignUp.css
+++ b/SignUp.css
@@ -1,11 +1,13 @@
 .signup_container{
 	display:flex;
-	flex-wrap:wrap;
+	position: absolute;
+	top: 10%;
+	right: 38%;
+	left: 35%;
 	flex-direction:column;
 	text-align:center;
 	align-items:center;
-	margin:50px;
-	background-color:white;
+    background-color: rgb(108, 149, 163);
 
 	
 }
@@ -26,6 +28,9 @@
 	padding:5px;
 	padding-right:20px;
 	padding-left:20px;
+}
+#remember{
+	cursor: pointer;
 }
 button {
 	margin:10px;
