--- a/SignUp.css
+++ b/SignUp.css
@@ -17,13 +17,13 @@
 	padding-right:20px;
 	padding-left:20px;
 }
-#pass{
+#mypass{
 	margin:10px;
 	padding:5px;
 	padding-right:20px;
 	padding-left:20px;
 }
-#name{
+#myname{
 	margin:10px;
 	padding:5px;
 	padding-right:20px;
@@ -39,4 +39,7 @@ button {
 	padding-left:20px;
 	cursor: pointer;
 
+}
+.cancel:hover{
+	color:red;
 }
